# rocketprep

./: .cursorrules  .env.example  .gitignore  .railwayignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/routes/: simulate.py
app/core/: config.py  database.py  models.py
app/models/: __init__.py  simulation_record.py
app/services/: simulator.py
frontend/: index.html
prep&paint_rockets/: Rocket prep&paint.txt
tests/: conftest.py  test_simulator.py
